# ServerTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  build.sh  devTools.bat
benchmark/gatling/user-files/logs/: TestConnLog  TestMsgLog
benchmark/gatling/user-files/simulations/: TestConnectionSimulation.scala  TestMessageSimulation.scala
examples/: CMakeLists.txt
examples/echo_server/: CMakeLists.txt  main.cpp
examples/echo_server/echo_protocol/: echo_protocol.h  echo_protocol_config.h
examples/http_server/: CMakeLists.txt  main.cpp  req.txt
examples/ws_server/: CMakeLists.txt  main.cpp
examples/ws_server/endpoints/: echo_endpoint.h
include/: CMakeLists.txt
include/server_template/: server_template.h  server_template_ns.cpp  server_template_ns.h
include/server_template/base/: base_ns.h  config_base.h  parser_base.h  server_base.h
include/server_template/http/: http.h  http_config.h  http_header_map.h  http_method.h  http_ns.h  http_parser.h  http_request.h  http_request_parser.h  http_response.h  http_status.h  http_upgrade_factory.h  http_upgrade_protocol.h  wtf.h
include/server_template/tcp/: connection_handler_base.h  tcp_based_protocol.h  tcp_connection_handler.h  tcp_ns.h  tcp_server_template.h
include/server_template/util/: base64.h  builder.h  byte_array.h  byte_converter.h  ip_address.h  sha_1.h  string_util.h  uri.h  utf8.h  util_ns.h  uuid.h
include/server_template/ws/: pmce.h  websocket.h  ws_config.h  ws_endpoint.h  ws_endpoint_manager.h  ws_extension.h  ws_frame.h  ws_frame_builder.h  ws_frame_parser.h  ws_message.h  ws_message_builder.h  ws_message_parser.h  ws_ns.h  ws_pme.h  ws_pme_manager.h  ws_session_handler.h  ws_status.h
test/: CMakeLists.txt  test_base64.cpp  test_byte_array.cpp  test_byte_converter.cpp  test_byte_converter_array.cpp  test_http_method.cpp  test_http_parser.cpp  test_http_response.cpp  test_http_status.cpp  test_sha_1.cpp  test_uri.cpp  test_utf8.cpp  test_ws_frame_builder.cpp  test_ws_frame_parser.cpp  test_ws_message_parser.cpp
